--- a/nx.json
+++ b/nx.json
@@ -24,6 +24,9 @@
     "app2-e2e": {
       "tags": [],
       "implicitDependencies": ["app2"]
+    },
+    "test-lib": {
+      "tags": []
     }
   }
 }
